Add link to style sheet

--- a/index.html
+++ b/index.html
@@ -3,17 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <title>Box Model Info</title>
-  <style>
-    body {
-      background-color: aqua;
-    }
-    h1 {
-      color: magenta;
-    }
-    p { color: gray; }
-    aside p { color: black; }
-    footer a { color: red; }
-  </style>
+  
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  
 </head>
 <body>
   <header>
